--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,4 +33,4 @@ jobs:
 
       - name: Deploy static files to S3
         run: |
-          aws s3 sync ./dist/plant-frontend/browser s3://your-s3-bucket-name --delete
+          aws s3 sync ./dist/plant-frontend/browser s3://vibe-plant-frontend-app --delete
